comment section alignment on page fixed

--- a/my_campus_guide/static/css/style.css
+++ b/my_campus_guide/static/css/style.css
@@ -176,6 +176,12 @@ footer {
 
  }
 
+ .trending {
+	max-height: 420px;
+	max-width: 650px;
+	object-fit: cover;
+}
+
  /*login and register*/
 
 
@@ -261,7 +267,8 @@ footer {
 }
 
 .comment_section{
-	margin-top: 30%;
+	margin-top: 400px;
+
 }
 
 
@@ -293,11 +300,7 @@ footer {
 
 }
 
-.trending {
-	max-height: 420px;
-	max-width: 650px;
-	object-fit: cover;
-}
+
 
 /*logout*/
 
